# ICG_OpenGL

./: .gitignore  README.md  build.sh
GDD/: Makefile  compile.sh  gdd_dsw_icg.idx  gdd_dsw_icg.tex  pi1.idx  pi1.tex
GDD/editaveis/: Cenarios&Lexicos.tex  GameDesignDocument.tex  PlanoIteracao.tex  abreviaturas.tex  cenariosLexicos.tex  controle.tex  diagramaDeClasses.tex  diagramaSequencia.tex  especificacoesSuplementares.tex  informacoes.tex  introducao.tex  modeloDeDominio.tex  planoDeIteracao.tex  requisitosTecnologicos.tex
GDD/fixos/: informacoes.tex
assets/shaders/: 1_hello_triangle.frag  3_vertex_colors.frag
cena_spiderman/source/: Makefile  main.cpp  ogldev_camera.cpp  ogldev_camera.h
listas/01/: lista01.cpp  prog
opengl-engine/: .gitignore  CMakeLists.txt  build.sh  create_cpp_file.sh
opengl-engine/cmake/: doxygen.cmake
opengl-engine/src/: CMakeLists.txt  main.cpp
opengl-engine/src/core/: ResourceManager.h  Systems.cpp  Systems.h
opengl-engine/src/engine/: Game.cpp  Game.h  GameObject.cpp  GameObject.h  StateGame.cpp  StateGame.h  StateManager.cpp  StateManager.h  Timer.cpp
opengl-engine/src/engine/states/game/: Placeholder.cpp  Placeholder.h
opengl-engine/src/graphics/: LocationCache.cpp  LocationCache.h  Renderable.cpp  Renderable.h  Renderer.cpp  Renderer.h  Shader.cpp  ShaderProgram.cpp  ShaderProgram.h  ShapeData.cpp  ShapeData.h  ShapeGenerator.cpp  ShapeGenerator.h  VertexArray.cpp  VertexArray.h  VertexData.cpp  VertexData.h  before_mesh.cpp  before_mesh.h  mesh.cpp  mesh.h  ogldev_texture.cpp  ogldev_texture.h
opengl-engine/src/graphics/buffers/: ArrayBuffer.cpp  ArrayBuffer.h  IndexBuffer.cpp  IndexBuffer.h  VertexArray.cpp  VertexArray.h
opengl-engine/src/input/: InputHandler.cpp  InputHandler.h
opengl-engine/src/math/: Math.h  MathUtils.cpp  MathUtils.h
opengl-engine/src/math/mat/: mat4.cpp  mat4.h
opengl-engine/src/math/vec/: vec2.cpp  vec2.h  vec3.cpp  vec3.h  vec4.cpp  vec4.h
opengl-engine/src/ogldev/: ogldev_basic_lighting.cpp  ogldev_basic_lighting.h  ogldev_camera.cpp  ogldev_camera.h  ogldev_glfw_backend.cpp  ogldev_main.cpp  ogldev_math_3d.cpp  ogldev_mesh.cpp  ogldev_mesh.h  ogldev_pipeline.cpp  ogldev_pipeline.h  ogldev_technique.cpp  ogldev_texture.cpp  ogldev_texture.h  ogldev_util.h
opengl-engine/src/util/: Assert.cpp  GlLog.h  Util.h
src/: CMakeLists.txt  main.cpp
src/core/: ResourceManager.h  (+2 more)
(+51 files in other folders)
